CV update, workshop, talk

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               <a href="https://github.com/RobertCsordas/">GitHub</a> &nbsp/&nbsp
               <a href="https://scholar.google.com/citations?user=av1lplwAAAAJ">Google Scholar</a> &nbsp/&nbsp
               <a href="https://twitter.com/robert_csordas">Twitter</a> &nbsp/&nbsp
+              <a href="https://bsky.app/profile/robertcsordas.bsky.social">Bluesky</a> &nbsp/&nbsp
               <a href="data/thesis.pdf">Thesis</a> 
             </p>
           </td>
@@ -529,6 +530,32 @@
           </td>
         </tr> 
 
+        <!-- WILDS -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/wilds.png" width="160">
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://openreview.net/forum?id=9vxOrkNTs1x">
+              <papertitle>Improving Baselines in the Wild</papertitle>
+            </a>
+            <br>
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="https://ischlag.github.io/">Imanol Schlag</a>,
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>NeurIPS DistShift Workshop, 2021</em>  
+            <br>
+            <a href="https://openreview.net/pdf?id=9vxOrkNTs1x">pdf</a> /
+            <a href="https://github.com/kazuki-irie/fork--wilds-public">code</a>
+            <br>
+            <p>
+              We present our critical observations on the iWildCam and FMoW datasets of the recently released WILDS benchmark. We show that (1) Conducting separate cross-validation for each evaluation metric is crucial for both datasets, (2) A weak correlation between validation and test performance might make model development difficult for iWildCam, (3) Minor changes in the training of hyper-parameters improve the baseline by a relatively large margin, (4) There is a strong correlation between certain domains and certain target labels.
+            </p>
+          </td>
+        </tr> 
+
         <!-- DNC -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
@@ -564,7 +591,7 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Workshop papers</heading>
+            <heading>Organizing Workshops</heading>
           </td>
         </tr>
       </tbody></table>
@@ -574,25 +601,17 @@
         <!-- Improving Baselines in the Wild -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/wilds.png" width="160">
+              <!-- <img src="images/wilds.png" width="160"> -->
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="https://openreview.net/forum?id=9vxOrkNTs1x">
-              <papertitle>Improving Baselines in the Wild</papertitle>
+            <a href="https://s2r-at-scale-workshop.github.io/">
+              <papertitle>System 2 Reasoning At Scale</papertitle>
             </a>
             <br>
-            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
-            <a href="https://ischlag.github.io/">Imanol Schlag</a>,
-            <strong>Róbert Csordás</strong>,
-            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
-            <br>
-              <em>NeurIPS DistShift Workshop, 2021</em>  
-            <br>
-            <a href="https://openreview.net/pdf?id=9vxOrkNTs1x">pdf</a> /
-            <a href="https://github.com/kazuki-irie/fork--wilds-public">code</a>
+              <em>NeurIPS 2024</em>  
             <br>
             <p>
-              We present our critical observations on the iWildCam and FMoW datasets of the recently released WILDS benchmark. We show that (1) Conducting separate cross-validation for each evaluation metric is crucial for both datasets, (2) A weak correlation between validation and test performance might make model development difficult for iWildCam, (3) Minor changes in the training of hyper-parameters improve the baseline by a relatively large margin, (4) There is a strong correlation between certain domains and certain target labels.
+              We organize a one-day workshop that focuses on improving reasoning in neural networks, particularly the challenges and strategies for achieving System-2 reasoning in transformer-like models. The workshop addresses issues like distinguishing memorization from rule-based learning, understanding, syntactic generalization, and compositionality. 
             </p>
           </td>
         </tr> 
@@ -638,6 +657,9 @@
         <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
+                <ul>
+                  <li> In Nov 2024 I gave a <a href="https://docs.google.com/presentation/d/1VWVCRuRuvropK6iz6Iuxx70Wta7ut6nu-muVf00_vAY/edit?usp=sharing">talk</a> in the <a href="https://flann.super.site/">FLaNN seminar</a> about Onion Representations</li>
+                </ul>
                 <ul>
                   <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1_k9gklQ9FouZURy-HBI6HTG1HzRXiSXF-dsU4UVp17A/edit?usp=sharing">talk</a> in <a href="https://www.apple.com/">Apple</a> about my work</li>
                 </ul>
