--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>,
             <strong>Róbert Csordás</strong>
             <br>
-              <em>Preprint</em>
+              <em>International Conference on Learning Representations (ICLR), 2025</em> 
             <br>
             <a href="https://arxiv.org/pdf/2410.20771.pdf">pdf</a> /
             <a href="https://github.com/jkallini/mrt5">code</a> /
