add new paperes

--- a/index.html
+++ b/index.html
@@ -78,6 +78,85 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- Efficient Depth -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/effective_depth.svg" height="140", style="padding-top: 2mm; padding-left: 0mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2505.13898">
+              <papertitle>Do Language Models Use Their Depth Efficiently?</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>
+            <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
+            <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>
+            <br>
+              <em>Preprint, 2025</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2505.13898">pdf</a> /
+            <a href="https://github.com/robertcsordas/llm_effective_depth">code</a> /
+            <a href="data/effective_depth.bib">bib</a>
+            <p>
+              We analyze the residual stream of LLMs and show that they are not using their depth efficiently, they are unlikely to be compositional, and deeper models spread out identical computations to the shallower ones.
+            </p>
+          </td>
+        </tr> 
+
+         <!-- MoSA -->
+         <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/mosa.png" height="160", style="padding-top: 0mm; padding-left: 3mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2505.00315">
+              <papertitle>Mixture of Sparse Attention: Content-Based Learnable Sparse Attention via Expert-Choice Routing</papertitle>
+            </a>
+            <br>
+            <a href="https://piotrpiekos.github.io/">Piotr Piękos</a>,
+            <strong>Róbert Csordás</strong>
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>Preprint, 2025</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2505.00315">pdf</a> /
+            <a href="data/mosa.bib">bib</a>
+            <p>
+              We introduce MoSA, a new sparse attention mechanism using dynamic, learned content-based sparsity. We show that MoSA can be used for acceleration, KV cache reduction, or scaling the attention to more attention heads, improving performance.
+            </p>
+          </td>
+        </tr> 
+
+        <!-- Measuring In-Context Computation Complexity via Hidden State Prediction -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/phi.svg" height="130", style="padding-top: 5mm; padding-left: 3mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2503.13431">
+              <papertitle>Measuring In-Context Computation Complexity via Hidden State Prediction</papertitle>
+            </a>
+            <br>
+            <a href="https://vincentherrmann.github.io/">Vincent Herrmann</a>,
+            <strong>Róbert Csordás</strong>
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>International Conference on Machine Learning (ICML), 2025</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2503.13431">pdf</a> /
+            <a href="data/phi.bib">bib</a>
+            <p>
+              We propose the prediction of the model's future hidden states as a new way to measure the "interestingness" of the model's internal computation.
+            </p>
+          </td>
+        </tr> 
+
 
         <!-- MrT5 -->
 
