--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <papertitle>Do Language Models Use Their Depth Efficiently?</papertitle>
             </a>
             <br>
-            <strong>Róbert Csordás</strong>
+            <strong>Róbert Csordás</strong>,
             <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
             <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>
             <br>
@@ -118,7 +118,7 @@
             </a>
             <br>
             <a href="https://piotrpiekos.github.io/">Piotr Piękos</a>,
-            <strong>Róbert Csordás</strong>
+            <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
               <em>Preprint, 2025</em> 
@@ -144,7 +144,7 @@
             </a>
             <br>
             <a href="https://vincentherrmann.github.io/">Vincent Herrmann</a>,
-            <strong>Róbert Csordás</strong>
+            <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
               <em>International Conference on Machine Learning (ICML), 2025</em> 
