NDIF Colab demo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <br>
             <a href="https://arxiv.org/pdf/2505.13898">pdf</a> /
             <a href="https://github.com/robertcsordas/llm_effective_depth">code</a> /
-            <a href="data/effective_depth.bib">bib</a>
+            <a href="data/effective_depth.bib">bib</a> / 
+            <a href="https://colab.research.google.com/github/ndif-team/nnsight-docs/blob/mini-papers/source/notebooks/mini-papers/csordas_llm_depth.ipynb">Colab demo</a>
             <p>
               We analyze the residual stream of LLMs and show that they are not using their depth efficiently, they are unlikely to be compositional, and deeper models spread out identical computations to the shallower ones.
             </p>
