--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <name>Róbert Csordás</name>
             </p>
             <p>
-              I am a postdoctoral researcher at the <a href="https://nlp.stanford.edu/">Stanford NLP group</a>, supervised by 
+              I am a member of technical staff (research scientist) at <a href="https://openai.com">OpenAI</a>. Previously, I was a postdoctoral researcher at the <a href="https://nlp.stanford.edu/">Stanford NLP group</a>, supervised by 
               Prof. <a href="https://nlp.stanford.edu/~manning/">Christopher Manning</a> and 
               Prof. <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>. 
               Previously I did my PhD at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
