--- a/index.html
+++ b/index.html
@@ -82,6 +82,30 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
+                <img src="images/ropepope.svg" height="140", style="padding-top: 2mm; padding-left: 10mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2509.10534">
+              <papertitle>Decoupling the" What" and" Where" With Polar Coordinate Positional Embeddings</papertitle>
+            </a>
+            <br>
+            <a href="https://agopal42.github.io/">Anand Gopalakrishnan</a>,
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>,
+            <a href="https://home.cs.colorado.edu/~mozer/index.php">Michael C. Mozer</a>
+            <br>
+              <em>Preprint, 2025</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2509.10534">pdf</a> /
+            <a href="data/pope.bib">bib</a>
+            <p>
+              We propose a new, complex positional encoding that outperforms RoPE and generalizes better to longer sequences.
+            </p>
+          </td>
+          </tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
                 <img src="images/effective_depth.svg" height="140", style="padding-top: 2mm; padding-left: 0mm;">
             </div>
           </td>
@@ -94,7 +118,7 @@
             <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
             <a href="https://web.stanford.edu/~cgpotts/">Christopher Potts</a>
             <br>
-              <em>Preprint, 2025</em> 
+              <em>NeurIPS, 2025</em> 
             <br>
             <a href="https://arxiv.org/pdf/2505.13898">pdf</a> /
             <a href="https://github.com/robertcsordas/llm_effective_depth">code</a> /
