--- a/index.html
+++ b/index.html
@@ -78,7 +78,34 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-        <!-- Efficient Depth -->
+        <!-- ThoughtBubbles -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/thoughtbubbles.svg" height="140", style="padding-top: 2mm; padding-left: 10mm;">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2510.00219">
+              <papertitle>Thoughtbubbles: an Unsupervised Method for Parallel Thinking in Latent Space</papertitle>
+            </a>
+            <br>
+            <a href="https://www.jemoka.com/">Houjun Liu</a>,
+            <a href="https://murtyshikhar.github.io/">Shikhar Murty</a>,
+            <a href="https://nlp.stanford.edu/~manning/">Christopher D. Manning</a>,
+            <strong>Róbert Csordás</strong>
+            <br>
+              <em>Preprint, 2025</em> 
+            <br>
+            <a href="https://arxiv.org/pdf/2510.00219">pdf</a> /
+            <a href="https://github.com/stanfordnlp/thoughtbubbles">code</a> /
+            <a href="data/thoughtbubbles.bib">bib</a>
+            <p>
+              We propose an unsupervised method for parallel thinking in latent space, by learning to fork residual streams in the Transformer.
+            </p>
+          </td>
+          </tr>
+        <!-- PoPE -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
@@ -104,6 +131,8 @@
             </p>
           </td>
           </tr>
+          <!-- Efficient Depth -->
+          <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
                 <img src="images/effective_depth.svg" height="140", style="padding-top: 2mm; padding-left: 0mm;">
