--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Before starting my PhD, I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
             </p>
             <p style="text-align:center">
-              <a href="mailto:rcsordas@stanford.edu">Email</a> &nbsp/&nbsp
+              <a href="mailto:rcsordas@openai.com">Email</a> &nbsp/&nbsp
               <a href="data/cv.pdf">CV</a> &nbsp/&nbsp
               <a href="https://github.com/RobertCsordas/">GitHub</a> &nbsp/&nbsp
               <a href="https://scholar.google.com/citations?user=av1lplwAAAAJ">Google Scholar</a> &nbsp/&nbsp
