--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a href="https://github.com/RobertCsordas/">GitHub</a> &nbsp/&nbsp
               <a href="https://scholar.google.com/citations?user=av1lplwAAAAJ">Google Scholar</a> &nbsp/&nbsp
               <a href="https://twitter.com/robert_csordas">Twitter</a> &nbsp/&nbsp
-              <a href="https://bsky.app/profile/robertcsordas.bsky.social">Bluesky</a> &nbsp/&nbsp
+              <!-- <a href="https://bsky.app/profile/robertcsordas.bsky.social">Bluesky</a> &nbsp/&nbsp -->
               <a href="data/thesis.pdf">Thesis</a> 
             </p>
           </td>
