--- a/index.html
+++ b/index.html
@@ -790,17 +790,20 @@
         <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
+              <ul>
+                <li> In July 2025 I gave a <a href="https://docs.google.com/presentation/d/1pgdBKjA650dKnDkQFQlQsQ9U115gNI8p3bCwUfKV6hU/edit?usp=sharing">talk</a> at <a href="https://praguesynapse.cz/">PragueSynapse</a> about systematic generalization and latent reasoning.</li>
+              </ul>
                 <ul>
-                  <li> In Nov 2024 I gave a <a href="https://docs.google.com/presentation/d/1VWVCRuRuvropK6iz6Iuxx70Wta7ut6nu-muVf00_vAY/edit?usp=sharing">talk</a> in the <a href="https://flann.super.site/">FLaNN seminar</a> about Onion Representations</li>
+                  <li> In Nov 2024 I gave a <a href="https://docs.google.com/presentation/d/1VWVCRuRuvropK6iz6Iuxx70Wta7ut6nu-muVf00_vAY/edit?usp=sharing">talk</a> in the <a href="https://flann.super.site/">FLaNN seminar</a> about Onion Representations.</li>
                 </ul>
                 <ul>
-                  <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1_k9gklQ9FouZURy-HBI6HTG1HzRXiSXF-dsU4UVp17A/edit?usp=sharing">talk</a> in <a href="https://www.apple.com/">Apple</a> about my work</li>
+                  <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1_k9gklQ9FouZURy-HBI6HTG1HzRXiSXF-dsU4UVp17A/edit?usp=sharing">talk</a> in <a href="https://www.apple.com/">Apple</a> about my work.</li>
                 </ul>
                 <ul>
-                  <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1mv8-X077NBqofKc8Hd7LW0_dE-cbK7qCZiQmiQhZ8As/edit?usp=sharing">talk</a> in <a href="https://www.adobe.com/">Adobe</a> on Mixture-of-Experts with focus on Universal Transformers</li>
+                  <li> In May 2024 I gave a <a href="https://docs.google.com/presentation/d/1mv8-X077NBqofKc8Hd7LW0_dE-cbK7qCZiQmiQhZ8As/edit?usp=sharing">talk</a> in <a href="https://www.adobe.com/">Adobe</a> on Mixture-of-Experts with focus on Universal Transformers.</li>
                 </ul>
                 <ul>
-                  <li> In March 2024 I gave a <a href="https://docs.google.com/presentation/d/1YPU9JFo818fXmPhh1RX_a0F3VlF_ij1ScJr3-vsUo1g/edit?usp=sharing">talk</a> in <a href="https://www.nvidia.com/">Nvidia</a> about my work</li>
+                  <li> In March 2024 I gave a <a href="https://docs.google.com/presentation/d/1YPU9JFo818fXmPhh1RX_a0F3VlF_ij1ScJr3-vsUo1g/edit?usp=sharing">talk</a> in <a href="https://www.nvidia.com/">Nvidia</a> about my work.</li>
                 </ul>
                 <ul>
                   <li> In March 2023 I gave a <a href="https://docs.google.com/presentation/d/1LU7qT2uNGsGRww50iZkiT-3Yb8NNjQ0_3rlND1kQM8U/edit?usp=sharing">talk</a> at <a href="https://nlp.epfl.ch/">NLP group</a> of <a href="https://www.epfl.ch/">EPFL</a> about my work.</li>
